<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zaray.wykomondo.MeasurementActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timeCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="50sp" />
        <TextView
            android:id="@+id/currentTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/currentTime"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/totalDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="50sp" />
        <TextView
            android:id="@+id/totalDistanceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/totalDistance"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/currentSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="50sp" />
        <TextView
            android:id="@+id/currentSpeedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/currentSpeed"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/maxSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="50sp" />
        <TextView
            android:id="@+id/maxSpeedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/maxSpeedText"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2">

        <Button
            android:id="@+id/startCounterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClickStartCounter"
            android:text="@string/startCounterButton" />

        <Button
            android:id="@+id/pauseCounterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClickPauseCounter"
            android:text="@string/pauseCounterButton" />

        <Button
            android:id="@+id/stopCounterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClickStopCounter"
            android:text="@string/stopCounterButton" />

    </LinearLayout>

    <TextView
        android:id="@+id/textTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

</RelativeLayout>
